ontol/ontol-compiler/test-cases/error/rel/identity_require_unique_type.on
def my_id (rel* is: serial)

def a (
    rel. 'id': my_id
)
def b (
    rel. 'id': my_id // ERROR already identifies a type
)
